--- a/init.engineer-iOS-App/View/Base.lproj/DashboardView.storyboard
+++ b/init.engineer-iOS-App/View/Base.lproj/DashboardView.storyboard
@@ -5,14 +5,8 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
-    <customFonts key="customFonts">
-        <array key="Fixedsys500c.ttf">
-            <string>FixedsysTTF</string>
-        </array>
-    </customFonts>
     <scenes>
         <!--儀錶板-->
         <scene sceneID="r5F-2n-kl4">
@@ -22,88 +16,25 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ydv-z0-piG">
-                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
-                                <subviews>
-                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="5jA-wT-XaR">
-                                        <rect key="frame" x="0.0" y="0.0" width="414" height="240"/>
-                                        <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="儀表板 Dashboard" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xC7-46-Yvt">
-                                                <rect key="frame" x="20" y="30" width="374" height="40"/>
-                                                <fontDescription key="fontDescription" name="FixedsysTTF" family="FixedsysTTF" pointSize="36"/>
-                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
-                                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="xH8-ZC-0yy">
-                                                <rect key="frame" x="20" y="90" width="374" height="100"/>
-                                                <subviews>
-                                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="no_avatar" translatesAutoresizingMaskIntoConstraints="NO" id="zNo-zF-G8c">
-                                                        <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
-                                                        <constraints>
-                                                            <constraint firstAttribute="width" secondItem="zNo-zF-G8c" secondAttribute="height" multiplier="1:1" id="mSg-fQ-xS3"/>
-                                                            <constraint firstAttribute="width" constant="100" id="wvN-Of-g6b"/>
-                                                        </constraints>
-                                                    </imageView>
-                                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="QCk-jL-gaq">
-                                                        <rect key="frame" x="120" y="0.0" width="254" height="100"/>
-                                                        <subviews>
-                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="User Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="91V-4A-WPY">
-                                                                <rect key="frame" x="0.0" y="0.0" width="254" height="50"/>
-                                                                <fontDescription key="fontDescription" name="FixedsysTTF" family="FixedsysTTF" pointSize="24"/>
-                                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                                <nil key="highlightedColor"/>
-                                                            </label>
-                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="User Email" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qZj-Kt-7am">
-                                                                <rect key="frame" x="0.0" y="50" width="254" height="50"/>
-                                                                <fontDescription key="fontDescription" name="FixedsysTTF" family="FixedsysTTF" pointSize="22"/>
-                                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                                <nil key="highlightedColor"/>
-                                                            </label>
-                                                        </subviews>
-                                                    </stackView>
-                                                </subviews>
-                                            </stackView>
-                                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" scrollEnabled="NO" dataMode="prototypes" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="npZ-mU-f1l">
-                                                <rect key="frame" x="20" y="210" width="374" height="0.0"/>
-                                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="height" id="faV-kv-R3T"/>
-                                                </constraints>
-                                                <inset key="separatorInset" minX="15" minY="0.0" maxX="0.0" maxY="0.0"/>
-                                            </tableView>
-                                        </subviews>
-                                        <edgeInsets key="layoutMargins" top="30" left="20" bottom="30" right="20"/>
-                                    </stackView>
-                                </subviews>
-                                <constraints>
-                                    <constraint firstItem="5jA-wT-XaR" firstAttribute="leading" secondItem="mys-jI-5sK" secondAttribute="leading" id="CAO-Ci-ttb"/>
-                                    <constraint firstItem="5jA-wT-XaR" firstAttribute="width" secondItem="TeQ-gD-2Bg" secondAttribute="width" id="FIK-dv-yhl"/>
-                                    <constraint firstItem="5jA-wT-XaR" firstAttribute="trailing" secondItem="mys-jI-5sK" secondAttribute="trailing" id="Nvv-nm-7on"/>
-                                    <constraint firstItem="5jA-wT-XaR" firstAttribute="bottom" secondItem="mys-jI-5sK" secondAttribute="bottom" id="Slr-Ap-wGC"/>
-                                    <constraint firstItem="5jA-wT-XaR" firstAttribute="top" secondItem="mys-jI-5sK" secondAttribute="top" id="y8Q-D2-pj5"/>
-                                </constraints>
-                                <viewLayoutGuide key="contentLayoutGuide" id="mys-jI-5sK"/>
-                                <viewLayoutGuide key="frameLayoutGuide" id="TeQ-gD-2Bg"/>
-                            </scrollView>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="CDK-2a-8w5">
+                                <rect key="frame" x="20" y="100" width="374" height="762"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="sectionIndexBackgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </tableView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="aq3-Jp-RTS"/>
                         <color key="backgroundColor" white="0.10000000000000001" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="Ydv-z0-piG" firstAttribute="top" secondItem="aq3-Jp-RTS" secondAttribute="top" id="6BF-Sx-pGt"/>
-                            <constraint firstItem="aq3-Jp-RTS" firstAttribute="bottom" secondItem="Ydv-z0-piG" secondAttribute="bottom" id="MaE-Gu-mAN"/>
-                            <constraint firstItem="Ydv-z0-piG" firstAttribute="leading" secondItem="aq3-Jp-RTS" secondAttribute="leading" id="SeM-Lk-bri"/>
-                            <constraint firstItem="Ydv-z0-piG" firstAttribute="trailing" secondItem="aq3-Jp-RTS" secondAttribute="trailing" id="dJD-ff-BIJ"/>
+                            <constraint firstItem="CDK-2a-8w5" firstAttribute="leading" secondItem="aq3-Jp-RTS" secondAttribute="leading" constant="20" id="0Vs-xg-7du"/>
+                            <constraint firstItem="CDK-2a-8w5" firstAttribute="bottom" secondItem="aq3-Jp-RTS" secondAttribute="bottom" id="87Y-1d-iP5"/>
+                            <constraint firstItem="aq3-Jp-RTS" firstAttribute="trailing" secondItem="CDK-2a-8w5" secondAttribute="trailing" constant="20" id="itw-ag-aQg"/>
+                            <constraint firstItem="CDK-2a-8w5" firstAttribute="top" secondItem="aq3-Jp-RTS" secondAttribute="top" constant="12" id="nZh-Vo-nq4"/>
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="儀錶板" id="g8e-zp-7sM"/>
                     <navigationItem key="navigationItem" id="jgb-qh-ess"/>
                     <connections>
-                        <outlet property="userArticleTableView" destination="npZ-mU-f1l" id="spa-Mk-jrp"/>
-                        <outlet property="userArticleTableViewHeight" destination="faV-kv-R3T" id="v6r-iB-o4s"/>
-                        <outlet property="userAvatarImageView" destination="zNo-zF-G8c" id="T2u-k0-X63"/>
-                        <outlet property="userEmail" destination="qZj-Kt-7am" id="Fs4-rC-ESf"/>
-                        <outlet property="userInformationStackView" destination="xH8-ZC-0yy" id="M3o-zb-rQ5"/>
-                        <outlet property="userName" destination="91V-4A-WPY" id="tYT-UK-uxP"/>
+                        <outlet property="userPostsTableView" destination="CDK-2a-8w5" id="hLC-nr-368"/>
                         <segue destination="Qut-Ki-2E0" kind="show" identifier="DashboardToLogin" id="63W-j3-dLV"/>
                     </connections>
                 </viewController>
@@ -142,9 +73,5 @@
     <resources>
         <image name="baseline_person_black_18pt" width="18" height="18"/>
         <image name="baseline_person_black_24pt" width="24" height="24"/>
-        <image name="no_avatar" width="64" height="64"/>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
     </resources>
 </document>
