--- a/init.engineer-iOS-App/View/Base.lproj/LoginView.storyboard
+++ b/init.engineer-iOS-App/View/Base.lproj/LoginView.storyboard
@@ -14,16 +14,16 @@
         </array>
     </customFonts>
     <scenes>
-        <!--Login Controller-->
+        <!--登入-->
         <scene sceneID="P25-X8-42a">
             <objects>
-                <viewController id="hrF-ea-Cq1" customClass="LoginController" customModule="純靠北工程師" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="LoginController" id="hrF-ea-Cq1" customClass="LoginController" customModule="純靠北工程師" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="h80-GN-I3h">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="純靠北工程師" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="35v-r5-wdR">
-                                <rect key="frame" x="126" y="346.5" width="162" height="31.5"/>
+                                <rect key="frame" x="126" y="327" width="162" height="31.5"/>
                                 <fontDescription key="fontDescription" name="FixedsysTTF" family="FixedsysTTF" pointSize="27"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -53,7 +53,8 @@
                             <constraint firstItem="35v-r5-wdR" firstAttribute="centerY" secondItem="6nd-OR-ryw" secondAttribute="centerY" multiplier="0.8" id="vSE-It-JGw"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="jcy-Jd-Kg3"/>
+                    <tabBarItem key="tabBarItem" title="登入" image="baseline_person_black_24pt" landscapeImage="baseline_person_black_18pt" id="fzc-6d-IbL"/>
+                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Zil-ob-EsE" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -61,6 +62,8 @@
         </scene>
     </scenes>
     <resources>
+        <image name="baseline_person_black_18pt" width="18" height="18"/>
+        <image name="baseline_person_black_24pt" width="24" height="24"/>
         <namedColor name="backgroundColor">
             <color red="0.96700000762939453" green="0.96700000762939453" blue="0.96700000762939453" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
